gccida/c3/output_do_verbatim
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1781:27: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
void  output_do_verbatim( output_buffer_0 *buffer, const char *msgid, va_list_0 *args_ptr) 
                          ^~~~~~~~~~~~~~~
                          output_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1781:71: error: unknown type name 'va_list_0'; did you mean 'va_list'?
void  output_do_verbatim( output_buffer_0 *buffer, const char *msgid, va_list_0 *args_ptr) 
                                                                      ^~~~~~~~~
                                                                      va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1789:17: error: expected expression
v7 = *( _OWORD *)&buffer->state.diagnostic_count[4]; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1789:9: error: use of undeclared identifier '_OWORD'
v7 = *( _OWORD *)&buffer->state.diagnostic_count[4]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1790:17: error: expected expression
v6 = *( _OWORD *)buffer->state.diagnostic_count; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1790:9: error: use of undeclared identifier '_OWORD'
v6 = *( _OWORD *)buffer->state.diagnostic_count; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1791:17: error: expected expression
v5 = *( _OWORD *)&buffer->state.cursor; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1791:9: error: use of undeclared identifier '_OWORD'
v5 = *( _OWORD *)&buffer->state.cursor; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1792:17: error: expected expression
v4 = *( _OWORD *)&buffer->state.indent_skip; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1792:9: error: use of undeclared identifier '_OWORD'
v4 = *( _OWORD *)&buffer->state.indent_skip; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1793:17: error: expected expression
v3 = *( _OWORD *)&buffer->state.prefix; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1793:9: error: use of undeclared identifier '_OWORD'
v3 = *( _OWORD *)&buffer->state.prefix; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1800:12: error: expected expression
*( _OWORD *)&buffer->state.diagnostic_count[4] = v7; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1800:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&buffer->state.diagnostic_count[4] = v7; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1801:12: error: expected expression
*( _OWORD *)buffer->state.diagnostic_count = v6; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1801:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)buffer->state.diagnostic_count = v6; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1802:12: error: expected expression
*( _OWORD *)&buffer->state.cursor = v5; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1802:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&buffer->state.cursor = v5; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/diagnostic.c:1803:12: error: expected expression
*( _OWORD *)&buffer->state.indent_skip = v4; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_do_verbatim/src/obj/diagnostic.o] Error 1
